# data_structs_N_Algos

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  binary_tree.h  build.sh  buildNRun.sh  data_structs.cpp  heap.cpp  heap.h  leetcode_questions.ods  main.cpp  run.py  scrap.cpp  stack.h  tester.cpp
Algos/: Algo_Notes.txt  CMakeLists.txt  Solution_Class.cpp  algos.cpp  fib.cpp  hackerrank.cpp  intzip.h  main.cpp  makefile  misc.cpp  misc.h  misc_driver.cpp  snippets.cpp  snippets.h
Algos/LeetCode/: Solution_Class.h  bestTimeToBuyAndSellStock.cpp  climbing_stairs.cpp  main.cpp  maxSubArray.cpp  maxSubArraySum.input
Algos/bitBanger/: bit_banger.h  bit_banger.imp.h  notes.txt  tester.cpp
Algos/cracking/: CMakeLists.txt  main  main.cpp  makefile  problems.cpp  problems.h
Algos/hackerrank/: heap_running_ave.input  makefile  markup_parser.cpp  markup_parser.h  tale_of_two_stacks.cpp
Algos/spoj/: prime_gen.cpp  theNextPalindrome.cpp
Notes/: Data_Structs.txt
cpp/: .gitignore  CMakeLists.txt  config.vars  dataStructs_N_Algos.sln  makefile
cpp/Algos/: CMakeLists.txt  algos.cpp  algos.h  intzip.cpp  main.cpp  makefile  snippets.cpp  templateFile.cpp  types.h  utility.cpp  utility.h
cpp/Algos/LeetCode/: CMakeLists.txt  Leetcode.vcxproj  Leetcode.vcxproj.filters  Solution_Class.cpp  array_problems.cpp  array_problems.h  array_testing.cpp  binary_tree_problems.cpp  binary_tree_problems.h  binary_tree_testing.cpp  design_problems.cpp  design_problems.h  dynamic_problems.cpp  dynamic_problems.h  dynamic_problems_testing.cpp  facebook.cpp  facebook.h  facebook_test.cpp  leetTest.vcxproj  leetTest.vcxproj.filters  leet_algos.cpp  leet_algos.h  linkedlist_problems.cpp  linkedlist_problems.h  main.cpp  math_problems.cpp  math_problems.h  math_testing.cpp  other_problems.cpp  other_problems.h  short_algos.cpp  short_algos.h  sort_search_problems.cpp  sort_search_problems.h  sort_search_testing.cpp  string_problems.cpp  string_problems.h  string_testing.cpp
cpp/Algos/LeetCode/input/: misc.input
cpp/Algos/bitBanger/: CMakeLists.txt  bit_banger.cpp  bit_banger.h  bit_banger.imp.h  bit_banger.vcxproj  bit_banger.vcxproj.filters  jstdtypes.h
cpp/Algos/cracking/: CMakeLists.txt  cracking.vcxproj  cracking.vcxproj.filters  main.cpp  makefile  problems.cpp  problems.h
cpp/Algos/generalAlgos/: CMakeLists.txt  kmp.cpp
cpp/Algos/hackerrank/: balanced_brackets.cpp  bin_search_ice_cream.cpp  bit_manip_lonely_integer.cpp  markup_parser.cpp  recursive_staircase.cpp
cpp/Algos/spoj/: CMakeLists.txt  prime_gen.cpp  spoj.vcxproj  spoj.vcxproj.filters  theNextPalindrome.cpp  theNextPalindrome.h
cpp/Debug/: Leetcode.lib  bit_banger.lib  cracking.lib  data_structs.lib  spoj.lib  utility.lib
cpp/EPIJudge/: README.md  notes.txt
cpp/EPIJudge/epi_judge_cpp/: bst_merge.cc  buy_and_sell_stock.cc  buy_and_sell_stock_twice.cc  count_bits.cc  dutch_national_flag.cc  even_odd_array.cc  even_odd_list_merge.cc  int_as_array_increment.cc  is_valid_parenthesization.cc  is_valid_sudoku.cc  look_and_say.cc  offline_sampling.cc  parity.cc  power_x_y.cc  prime_sieve.cc  queue_from_stacks.cc  reverse_bits.cc  reverse_digits.cc  sorted_array_remove_dups.cc  spiral_ordering_segments.cc  tree_with_parent_inorder.cc
cpp/Notes/: Algos.txt  Binary_trees.txt  know_this.txt  linkedList.txt  modernCppFeatures.txt  notes.sql  sockets.txt
cpp/data_structs/: CMakeLists.txt  LRU_Cache.cpp  bin_tree.cpp  binary_tree.cpp  binary_tree.h  data_structs.cpp  data_structs.vcxproj  data_structs.vcxproj.filters  hash_table.cpp  hash_table.h  heap.cpp  heap.h  linked_list.cpp  linked_list.h  logger.cpp  logger.h  master_structs.h  node.h  queue.h  scrap_stack.cpp  string_util.cpp  test_hashtable.cpp  test_linked_list.cpp  tester.cpp  trie.cpp
cpp/driver/: CMakeLists.txt  driver.vcxproj  main.cpp
cpp/testing/: CMakeLists.txt  makefile  tester.cpp
cpp/utility/: CMakeLists.txt  types.h  utility.cpp  utility.h  utility.vcxproj  utility.vcxproj.filters
data_structs/: Binary_trees.txt  CMakeLists.txt  LRU_Cache.h  README.txt  binary_tree.cpp  binary_tree.h  data_structs.cpp  heap.cpp  heap.h  linked_list.cpp  linked_list.h  linked_list_main.cpp  main.cpp  makefile  node.h  queue.h  stack.h  string_util.h  test_heap.cpp  tester.cpp  trie.cpp  trie.h  trie_test.cpp
data_structs/trie_complete/: trie_main.cpp
hackerrank/: __init__.py  absolute_permutation.py  hackerrank_utility.py  matrix_layer_rotation.py  matrix_rotation.py  save_the_prisoner.py  scrap.py  time_in_words.py
hackerrank/assessments/: save_the_prisoner.csv
hackerrank/input/: save_the_prisoner.in
hackerrank/output/: save_the_prisoner.out
python/: __init__.py  algos.py  data_structs.py  plot_mania.py  scrap.py  template.py  tmp.txt  utility.py
python/leetcode/: arrays_and_strings.py  treenode.py  trees.py
testing/: makefile  more_quesitons.txt  quiz.sh  tester  tester.cpp
